--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jomethedope/weather-app-node-lecture/issues"
   },
-  "homepage": "https://github.com/jomethedope/weather-app-node-lecture#readme"
+  "homepage": "https://github.com/jomethedope/weather-app-node-lecture#readme",
+  "dependencies": {
+    "request": "^2.88.0"
+  }
 }
